# loguru-table-sink

./: README.md  pyproject.toml  table_sink.py
