[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
description = "A sink for loguru that display the log as a table."
name = "table_sink"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "codespell",
  "coverage",
  "loguru",
  "pre-commit",
  "ruff>=0.5.3"
]

[project.urls]
"Homepage" = "https://github.com/vincentqb/loguru-table-sink/"

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.hatch.build]
only-include = ["table_sink.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.ty.rules]
invalid-assignment = "warn"
missing-argument = "ignore"
unresolved-attribute = "warn"
unresolved-import = "warn"

[tool.uv]
package = true
